CellRelativePath in BuildTargetPattern
Summary: Replace `BuildTargetPattern` `cell` and `basePath` fields with single `CellRelativePath` (replace `Path` with `ForwardRelativePath`).

Reviewed By: gabrielrussoc

shipit-source-id: 7d7690e230